--- a/notes/notebooks.ipynb
+++ b/notes/notebooks.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Content with notebooks\n",
     "\n",
@@ -42,53 +41,54 @@
     "\n",
     "Jupyter Book will also embed your code blocks and output in your book.\n",
     "For example, here's some sample Matplotlib code:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from matplotlib import rcParams, cycler\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "plt.ion()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Fixing random state for reproducibility\n",
-    "np.random.seed(19680801)\n",
-    "\n",
-    "N = 10\n",
-    "data = [np.logspace(0, 1, 100) + np.random.randn(100) + ii for ii in range(N)]\n",
-    "data = np.array(data).T\n",
-    "cmap = plt.cm.coolwarm\n",
-    "rcParams['axes.prop_cycle'] = cycler(color=cmap(np.linspace(0, 1, N)))\n",
-    "\n",
-    "\n",
-    "from matplotlib.lines import Line2D\n",
-    "custom_lines = [Line2D([0], [0], color=cmap(0.), lw=4),\n",
-    "                Line2D([0], [0], color=cmap(.5), lw=4),\n",
-    "                Line2D([0], [0], color=cmap(1.), lw=4)]\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 5))\n",
-    "lines = ax.plot(data)\n",
+    "# Fixing random state for reproducibility\r\n",
+    "np.random.seed(19680801)\r\n",
+    "\r\n",
+    "N = 10\r\n",
+    "data = [np.logspace(0, 1, 100) + np.random.randn(100) + ii for ii in range(N)]\r\n",
+    "data = np.array(data).T\r\n",
+    "cmap = plt.cm.coolwarm\r\n",
+    "rcParams['axes.prop_cycle'] = cycler(color=cmap(np.linspace(0, 1, N)))\r\n",
+    "\r\n",
+    "\r\n",
+    "from matplotlib.lines import Line2D\r\n",
+    "custom_lines = [Line2D([0], [0], color=cmap(0.), lw=4),\r\n",
+    "                Line2D([0], [0], color=cmap(.5), lw=4),\r\n",
+    "                Line2D([0], [0], color=cmap(1.), lw=4)]\r\n",
+    "\r\n",
+    "fig, ax = plt.subplots(figsize=(10, 5))\r\n",
+    "lines = ax.plot(data)\r\n",
     "ax.legend(custom_lines, ['Cold', 'Medium', 'Hot']);"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "There is a lot more that you can do with outputs (such as including interactive outputs)\n",
     "with your book. For more information about this, see [the Jupyter Book documentation](https://jupyterbook.org)"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
